--- a/starter-code/package.json
+++ b/starter-code/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "data-binding-angular-nutrition-app",
+  "name": "lab-angular-data-binding",
   "version": "0.0.0",
   "license": "MIT",
+  "angular-cli": {},
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
@@ -21,13 +22,17 @@
     "@angular/platform-browser": "^4.0.0",
     "@angular/platform-browser-dynamic": "^4.0.0",
     "@angular/router": "^4.0.0",
+    "acorn-dynamic-import": "^2.0.2",
     "core-js": "^2.4.1",
+    "loader-runner": "^2.3.0",
+    "node-libs-browser": "^2.0.0",
     "rxjs": "^5.1.0",
+    "watchpack": "^1.3.1",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.1.3",
-    "@angular/compiler-cli": "^4.0.0",
+    "@angular/cli": "1.2.0",
+    "@angular/compiler-cli": "^4.2.6",
     "@angular/language-service": "^4.0.0",
     "@types/jasmine": "2.5.45",
     "@types/node": "~6.0.60",
